
0.7.4
- [#40](https://github.com/simulacre/pry-remote-em/pull/40) - require 'pry', not its parts [rking](https://github.com/rking)
- [#39](https://github.com/simulacre/pry-remote-em/pull/39) - stagger_output needs Pry::Pager to be loaded in the parent scope [pcmantz](https://github.com/pcmantz)

0.7.3
- Broker listens at 6462 everything else starts at 6463

0.7.2
- Broker.run yields to a block when broker connection has been established

0.7.1
- server list can be filtered by host, port, name, or SSL support
- server list can be sorted by host, port, name, or SSL support
- cli assumes port 6461 when not specified
- cli accepts -c and -p options to immediately connect or proxy from the broker to a server matching the name specified on the command line
- closes #37 loosens pry version requirement
- client sorts server list by host address
- when registering 0.0.0.0 with a Broker register each interface instead

0.7.0
- fixes #21 version matching between client and server allow differences in patch levels
- fixes #31 client reports own version when incompatible with server
- client supports vi mode: rb-readline replaced by readline
- fixes #31 termios is no longer a hard requirement: shell commands will be disabled without it
- adds PryRemoteEm.servers and PryRemoteEm.stop_server
- broker can proxy requests to local or remote servers that have registered with it
- closes #11 all servers will attempt to register with a broker; client will retrieve list of servers from the broker and present a menu to the user by default
- when specifying a specific port to listen on the option :port_fail can be set to :auto; if binding fails attempt to bind on the next port 
- server.run returns a url (String) with the scheme, host and port of the listening server
- json specific parts of wire protocol are abstracted away from client and server
- json proto is a bit more robust: delimeter can be a part of data and CRC is performed

0.6.2
- handle reset command appropriately

0.6.1